avance proyecto ML flask terminado

--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Predicción</title>
+    <title>Proyecto ML</title>
     <style>
         @font-face {
             font-family: 'Questrial';
@@ -33,7 +33,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(255, 255, 255, 0.5); /* Capa blanca semi-transparente */
+            background-color: rgba(255, 255, 255, 0.5); 
             z-index: 1;
         }
 
@@ -59,7 +59,7 @@
             margin-top: 20px;
             background-color: #695FAF;
             border: none;
-            color: #242424;
+            color: #FFFFFF;
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
@@ -77,9 +77,8 @@
         <h1>¿Cuánto Cuesta?</h1>
     </div>
     <div id="texto">
-        <p>Mediante la especificación de las características del inmueble <br>
-            podemos hacer una predicción del precio medio de la vivienda</p>
+        <p>Obten el precio medio de un inmueble en base a sus caracteristicas</p>
     </div>
-    <a id="button" href="/predict">Valorar inmueble</a>
+    <a id="button" href="/valorar">Valorar inmueble</a>
 </body>
 </html>
