--- a/src/app/templates/predict.html
+++ b/src/app/templates/predict.html
@@ -1,3 +1,11 @@
-<h1> HOLA <h1\>
-
-<h2> Prediccion</h2>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyecto ML - Precio final</title>
+</head>
+<body>
+    <h1>El precio medio por m2 del inmueble es: {{ pecio_predd }}</h1>
+</body>
+</html>
