--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -68,7 +68,7 @@
             cursor: pointer;
             border-radius: 5px;
             position: relative;
-            z-index: 3; /* Asegurar que el botón esté por encima de la capa blanca */
+            z-index: 3;
         }
     </style>
 </head>
