--- a/src/app/templates/predict.html
+++ b/src/app/templates/predict.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto ML - Precio final</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Questrial', Arial, sans-serif; 
+            background-color: #f2f2f2; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .precio-container {
+            background-color: rgba(105, 95, 175, 0.7); 
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            color: #ffffff; /* Color del texto */
+        }
+        
+        #precio_pred {
+            display: inline-block;
+            margin-left: auto;
+            margin-right: auto;
+            color: #000000; 
+            font-size: 30px;
+            font-weight: bold; 
+        }
+    </style>
 </head>
 <body>
-    <h1>El precio medio por m2 del inmueble es: {{ pecio_predd }}</h1>
+    <div class="precio-container">
+        <h1>El precio medio por m2 del inmueble es de: </h1><br>
+        <span id="precio_pred"> {{ precio_pred }}</span>
+    </div>
 </body>
 </html>
+
+
