--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -79,6 +79,6 @@
     <div id="texto">
         <p>Obten el precio medio de un inmueble en base a sus caracteristicas</p>
     </div>
-    <a id="button" href="/valorar">Valorar inmueble</a>
+    <a id="button" href="/valorar">Completar datos</a>
 </body>
 </html>
