valores negativos - rango precios

--- a/App/templates/predict.html
+++ b/App/templates/predict.html
@@ -42,6 +42,8 @@
     <div class="precio-container">
         <h1>El precio medio por m2 del inmueble es de: </h1><br>
         <span id="precio_pred"> {{ precio_pred }}</span>
+        <h1>El rango de precio se situa entre estos dos valores </h1><br>
+        <span id="precio_pred"> {{ rango_min }} - {{ rango_max }}</span>
     </div>
 </body>
 </html>
