--- a/App/templates/valorar.html
+++ b/App/templates/valorar.html
@@ -93,7 +93,7 @@
             <option value="0">No</option>
         </select><br>
 
-        <label for="construccion">Construcción (m<sup>2</sup>):</label>
+        <label for="construccion">Año Construcción:</label>
         <input type="number" id="construccion" name="construccion"><br>
 
         <label for="metros">Metros (m<sup>2</sup>):</label>
